# binary_data_processing

./: CMakeLists.txt  README.md  main.cpp
Custom classes/Header/: classroom.h
Custom classes/Source/: classroom.cpp
Decoding/: Decoder.cpp  Decoder.h
Encoding/: Encoder.cpp  Encoder.h
Serializeable/: Serializable.h
Serializeable/Custom classes/Performers/: Performer_Type.h  Performers_collection.cpp  Performers_collection.h
Serializeable/Custom classes/Performers/Header/: Athlete.h  Musician.h  Performer.h
Serializeable/Custom classes/Performers/Source/: Athlete.cpp  Musician.cpp  Performer.cpp
Serializeable/Custom classes/Student Classroom/Header/: classroom.h
Serializeable/Custom classes/Student Classroom/Source/: classroom.cpp
